/*****
 License
 --------------
 Copyright © 2017 Bill & Melinda Gates Foundation
 The Mojaloop files are made available by the Bill & Melinda Gates Foundation under the Apache License, Version 2.0 (the "License") and you may not use these files except in compliance with the License. You may obtain a copy of the License at
 http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, the Mojaloop files are distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 Contributors
 --------------
 This is the official list of the Mojaloop project contributors for this file.
 Names of the original copyright holders (individuals or organizations)
 should be listed with a '*' in the first column. People who have
 contributed from an organization can be listed under the organization
 that actually holds the copyright for their contributions (see the
 Gates Foundation organization for an example). Those individuals should have
 their names indented and be marked with a '-'. Email address can be added
 optionally within square brackets <email>.
 * Gates Foundation
 - Name Surname <name.surname@gatesfoundation.com>

 - Ramiro González Maciel <ramiro@modusbox.com>

 --------------
 ******/

syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
package mojaloop.events;

enum EnEventType {
  UNDEFINED = 0;
  LOG = 1;
  AUDIT = 2;
  ERROR = 3;
  TRACE = 4;
}

enum EnEventTypeAction {
  UNDEFINED = 0;
  START = 1;
  END = 2;
  INFO = 3;
  DEBUG = 4;
  VERBOSE = 5;
  PERF = 6;
  INTERNAL = 7;
  EXTERNAL = 8;
}

enum EnEventStatus {
  UNDEFINED = 0;
  SUCCESS = 1;
  FAILED = 2;
}

message ObTraceType {
  string service = 1;
  string traceId = 2;
  string spanId = 3;
  string parentSpanId = 4; // Optional
  int32 sampled = 5; // Optional
  int32 flags = 6; // Optional
}

message ObStateType {
  EnEventStatus status = 1;
  int32 code = 2; // Optional
  string description = 3; // Optional
}

message ObEventType {
  string id = 1;
  EnEventType type = 2; 
  EnEventTypeAction action = 3;
  string createdAt = 4; // FIXME use google.protobuf.Timestamp  - First need to know how to represent in JSON
  string responseTo = 5; // Optional
  ObStateType state = 6;
}

message ObMetadataType {
  ObEventType event = 1;
  ObTraceType trace = 2;
}

message MessageType {
  string id = 1;
  string from = 2; // Optional
  string to = 3; // Optional
  string pp = 4; // Optional
  ObMetadataType metadata = 5; // Optional 
  string type = 6; // Optional
  google.protobuf.Any content = 7;
}

service EventLogger {
  rpc Log (MessageType) returns (MessageType);
}